tests/ui/consts/const-item-no-type/with-colon.stderr
error: missing type for `const` item
  --> $DIR/with-colon.rs:3:10
   |
LL | const _A: = 123;
   |          ^ help: provide a type for the constant: `i32`

error: missing type for `const` item
  --> $DIR/with-colon.rs:7:14
   |
LL |     const _B: = 123;
   |              ^ help: provide a type for the constant: `i32`

error: aborting due to 2 previous errors

